# VxStudio

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  VXRebalance_DSP_Update_Spec copy.md  VXRebalance_DSP_Update_Spec.md  VXRebalance_Phase2_5_Productization_Spec.md  VXRebalance_Phase3_LineByLine.md  WEB_DEPLOYMENT_GUIDE.md  WEB_SUMMARY.txt  clean and finish.md  dynamic-smooth.md  error.txt  levelerv3.md
.claude/: CLAUDE.md  settings.json  settings.windows.json
.claude/hooks/: on-stop.ps1  on-stop.sh  post-failure.ps1  post-failure.sh  post-write.ps1  post-write.sh  pre-bash.ps1  pre-bash.sh  pre-write.ps1  pre-write.sh  session-start.ps1  session-start.sh
.codex/: AGENTS.md  config.toml
.gemini/: GEMINI.md  settings.json
.gemini/commands/code/: review.toml
.gemini/commands/git/: changelog.toml  commit.toml
.gemini/commands/task/: plan.toml
.gemini/extensions/project/: gemini-extension.json
JUCE/: .gitignore
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_ARA.cpp
Source/dsp/: AudioProcessStage.h  DenoiseEngine.h  DenoiseOptions.h  HandmadePrimary.cpp  HandmadePrimary.h  ProcessOptions.h
Source/vxstudio/framework/: README.md  VxStudioAudioProcessStage.h  VxStudioBlockSmoothedControl.h  VxStudioEditorBase.cpp  VxStudioEditorBase.h  VxStudioFft.h  VxStudioHelpView.cpp  VxStudioHelpView.h  VxStudioLevelTraceView.cpp  VxStudioLevelTraceView.h  VxStudioLightAnalysis.h  VxStudioLookAndFeel.cpp  VxStudioLookAndFeel.h  VxStudioModePolicy.h  VxStudioModelAssets.cpp  VxStudioModelAssets.h  VxStudioOutputTrimmer.h  VxStudioParameters.h  VxStudioProcessCoordinator.h  VxStudioProcessorBase.cpp  VxStudioProcessorBase.h  VxStudioProtection.h  VxStudioSignalQuality.cpp  VxStudioSignalQuality.h  VxStudioSpectralHelpers.h  VxStudioSpectrumTelemetry.cpp  VxStudioSpectrumTelemetry.h  VxStudioStageChain.h  VxStudioUiHelpers.cpp  VxStudioVoiceAnalysis.cpp  VxStudioVoiceAnalysis.h  VxStudioVoiceContext.cpp  VxStudioVoiceContext.h
Source/vxsuite/framework/: README.md  VxSuiteAudioProcessStage.h  VxSuiteBlockSmoothedControl.h  VxSuiteBlockSmoothing.h  VxSuiteEditorBase.cpp  VxSuiteEditorBase.h  VxSuiteFft.h  VxSuiteHelpContent.h  VxSuiteHelpView.cpp  VxSuiteHelpView.h  VxSuiteLatencyAlignedListen.h  VxSuiteLevelTraceView.cpp  VxSuiteLevelTraceView.h  VxSuiteLookAndFeel.cpp  VxSuiteLookAndFeel.h  VxSuiteModePolicy.h  VxSuiteModelAssets.cpp  VxSuiteModelAssets.h  VxSuiteOutputTrimmer.h  VxSuiteParameters.h  VxSuiteProcessCoordinator.h  VxSuiteProcessOptions.h  VxSuiteProcessorBase.cpp  VxSuiteProcessorBase.h  VxSuiteProduct.h  VxSuiteProtection.h  VxSuiteSignalQuality.cpp  VxSuiteSpectralHelpers.h  VxSuiteSpectrumTelemetry.cpp  VxSuiteSpectrumTelemetry.h  VxSuiteStageChain.h  VxSuiteUiHelpers.cpp  VxSuiteUiHelpers.h  VxSuiteVoiceAnalysis.cpp  VxSuiteVoiceContext.cpp  VxSuiteVoiceContext.h
assets/reaper/: README.md  generation-report.txt
assets/reaper/FX Chains/: VX Suite - Camera Review - Far Phone.RfxChain  VX Suite - Live Music - Front Of Room.RfxChain  VX Suite - Mixed Audio - Voice + Guitar.RfxChain  VX Suite - Podcast Finishing - Clean Voice.RfxChain
assets/reaper/RPL Files/: VXCleanup.RPL  VXDeepFilterNet.RPL  VXDenoiser.RPL  VXDeverb.RPL  VXFinish.RPL  VXOptoComp.RPL  VXProximity.RPL  VXSubtract.RPL  VXTone.RPL
cmake/: FindEigen3.cmake  VxStudioPlugin.cmake  VxStudioValidation.cmake  VxStudioVersions.h.in  VxSuitePlugin.cmake  VxSuiteValidation.cmake
data/voice_corpus/: README.md  VX_SUITE_BATCH_AUDIO_CHECK.md  VX_SUITE_BATCH_AUDIO_CHECK_CLEANUP_METRICS.md  VX_SUITE_BATCH_AUDIO_CHECK_CLEANUP_REVERT_CHECK.md  VX_SUITE_BATCH_AUDIO_CHECK_CLEANUP_TUNED.md  VX_SUITE_BATCH_AUDIO_CHECK_DENOISER_CLIP.md  VX_SUITE_BATCH_AUDIO_CHECK_DENOISER_REAL_CANDIDATE.md  VX_SUITE_BATCH_AUDIO_CHECK_DEVERB_CLIP.md  VX_SUITE_BATCH_AUDIO_CHECK_DEVERB_REAL.md  VX_SUITE_BATCH_AUDIO_CHECK_DEVERB_REAL_CANDIDATE.md  VX_SUITE_BATCH_AUDIO_CHECK_DEVERB_TUNED.md  VX_SUITE_BATCH_AUDIO_CHECK_FINISH_CANDIDATE.md  VX_SUITE_BATCH_AUDIO_CHECK_HEAVY_ONE.md  VX_SUITE_BATCH_AUDIO_CHECK_LIGHT_SHORT.md  VX_SUITE_BATCH_AUDIO_CHECK_OPTOCOMP_CANDIDATE.md  VX_SUITE_BATCH_AUDIO_CHECK_PART1.md  VX_SUITE_BATCH_AUDIO_CHECK_PROXIMITY_REAL.md  VX_SUITE_BATCH_AUDIO_CHECK_SUBTRACT_CLIP.md  VX_SUITE_BATCH_AUDIO_CHECK_SUBTRACT_REAL.md  VX_SUITE_BATCH_AUDIO_CHECK_SUBTRACT_TUNED.md
docs/: VX_ANALYZER_REBUILD_SPEC.md  VX_LEVELER_SPEC.md  VX_POLISH_PRODUCT_BRIEF.md  VX_REBALANCE_SPEC.md  VX_REBALANCE_V2_SPEC.md  VX_SUITE_CONTROL_SEMANTICS.md  VX_SUITE_FRAMEWORK.md  VX_SUITE_PRODUCT_TEMPLATE.md  VX_SUITE_RELEASE_CHECKLIST.md  VX_SUITE_RESEARCH.md
tasks/: GOLD_RELEASE_FIXES.md  GOLD_RELEASE_SUMMARY.txt  README_UPDATES.md  REVIEW_FINDINGS.md  lessons.md  review-plan.md  todo.md
tasks/reports/: VX_SUITE_BATCH_AUDIO_CHECK_2026-03-24_FINISH_GAIN_100_CENTER.md  VX_SUITE_BATCH_AUDIO_CHECK_2026-03-24_GAIN_AUDIT.md  VX_SUITE_FULL_AUDIT_2026-03-20.md  rebalance_listening_protocol_report.md  rebalance_targeted_verification_2026-03-29.md  stem-profile-brightside-compare.md
tasks/reports/effect-audits/: README.md  cleanup.md  deepfilternet.md  denoiser.md  deverb.md  finish.md  optocomp.md  proximity.md  subtract.md  tone.md
tasks/reports/rebalance-openunmix-v20/: brightside_masks.json
tasks/reports/stem-profile-brightside-pro/: report.md
tests/: VXDeverbMeasure.cpp  VXDeverbTests.cpp  VXLevelerMeasure.cpp  VXLevelerTuneSearch.cpp  VXRebalanceMeasure.cpp  VXStudioBatchAudioCheck.cpp  VXStudioPluginRegressionTests.cpp  VXStudioProfile.cpp  VXSuiteBatchAudioCheck.cpp  VXSuitePluginRegressionTests.cpp  VXSuiteProfile.cpp  VxStudioProcessorTestUtils.h  VxStudioVoiceAnalysisTests.cpp  VxSuiteProcessorTestUtils.h  VxSuiteVoiceAnalysisTests.cpp
tools/: rebalance_listening_protocol.py  rebalance_openunmix_v20.py  stem_profile.py
tools/reaper/: generate_vx_reaper_presets.lua
tools/release/: release_preflight.sh  sign_and_notarize_vst3.sh  store_notary_profile.sh
web/: .gitignore  README.md  WEB_STRUCTURE.md  index.html
web/downloads/: index.html  vxstudio-1.0.0-macos-universal.sha256
(+214 files in other folders)
